fixed change of contrast

--- a/snakeProj/src/app/main/main.component.scss
+++ b/snakeProj/src/app/main/main.component.scss
@@ -63,3 +63,6 @@
 .text:hover .tipetext {
   visibility: visible;
 }
+.black-and-white {
+  background-color: #000;
+}
